[gd_scene load_steps=8 format=3 uid="uid://c5ndh5x0xttcc"]

[ext_resource type="Script" path="res://assets/scenes/hud/hud.gd" id="1_f571p"]
[ext_resource type="FontFile" uid="uid://cwpt2uuf6can2" path="res://assets/theme/fonts/GraffitiYouth-Regular.otf" id="2_f583t"]
[ext_resource type="Script" path="res://addons/graph_2d/graph_2d.gd" id="2_llwan"]
[ext_resource type="LabelSettings" uid="uid://dwo61ssg61o13" path="res://assets/theme/fonts/label.tres" id="3_wd6ef"]

[sub_resource type="Theme" id="Theme_el0yd"]
default_font = ExtResource("2_f583t")
default_font_size = 100

[sub_resource type="LabelSettings" id="LabelSettings_be0d4"]
font = ExtResource("2_f583t")
font_size = 50
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 0
shadow_color = Color(1, 0, 0, 0)

[sub_resource type="Theme" id="Theme_58rb6"]
default_font_size = 15

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_f571p")

[node name="WealthLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 227.0
offset_right = 111.0
offset_bottom = 250.0
text = "Wealth: ??"

[node name="ComboLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 981.0
offset_top = 33.0
offset_right = 1110.0
offset_bottom = 133.0
rotation = 0.409895
pivot_offset = Vector2(60, 50)
theme = SubResource("Theme_el0yd")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "00"
label_settings = ExtResource("3_wd6ef")
horizontal_alignment = 1

[node name="ComboSubtitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 988.241
offset_top = 117.489
offset_right = 1106.24
offset_bottom = 217.489
rotation = -0.0942478
text = "COMBO"
label_settings = SubResource("LabelSettings_be0d4")

[node name="WealthGraph" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 30.0
offset_top = 33.0
offset_right = 315.0
offset_bottom = 217.0
mouse_filter = 2
mouse_force_pass_scroll_events = false
theme = SubResource("Theme_58rb6")
script = ExtResource("2_llwan")
x_max = 60.0
show_x_ticks = false
show_x_numbers = false
show_horizontal_line = false
y_max = 100.0
y_label = "Wealth"
background_color = Color(0.0187022, 0.076949, 0.158054, 1)
grid_horizontal_visible = true
grid_vertical_visible = true

[node name="WealthGraphTimer" type="Timer" parent="WealthGraph"]
unique_name_in_owner = true
autostart = true

[connection signal="timeout" from="WealthGraph/WealthGraphTimer" to="." method="_on_wealth_graph_timer_timeout"]
